# bioloidgp

./: .gitignore  CMakeLists.txt  README.md
data/mtn/: bio_gp_humanoid_kr.mtn  bio_gp_mine.mtn
data/sdf/: ground.urdf
data/urdf/BioloidGP/: BioloidGP.URDF  BioloidGPMotorMap.xml
data/xml/: motion.xml
robot/: HumanoidController.cpp  HumanoidController.h  Main.cpp  Motion.cpp  Motion.h  MotorMap.cpp  MotorMap.h  MyWindow.cpp  MyWindow.h
utils/: #GLObjects.h#  CppCommon.h  GLObjects.h  HppCommon.h
